<resources>
    <string name="app_name">Kaboor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_input_detail_passenger">Masukkan Detail Penumpang</string>
    <string name="label_extra_facilities">Fasilitas Ekstra</string>
    <string name="label_baggage">Bagasi</string>
    <string name="body_baggage">Yakin bagasi 20 kg cukup semua barang bawaan kamu sekarang</string>
    <string name="label_footer_baggage">Tambah bagasi tambahan</string>
    <string name="label_select_chair">Nomor Kursi</string>
    <string name="body_select_chair">Yuk pilih kursi yang dekat teman atau keluargamu, biar gak keliatan jomblo loh. Apa mau kamu duduk sendiri di kursi tengah?</string>
    <string name="label_footer_select_chair">Pilih kursimu sekarang</string>
    <string name="label_buy_food">Makanan</string>
    <string name="body_buy_food">Terbang 4 jam bisa bikin laper lho. Nikmati hidangan yang cocok dalam petualangnmu dengan kuliner diatas pesawat.</string>
    <string name="label_footer_buy_food">Beli makananmu sekarang</string>
    <string name="button_continue_ordering">Lanjutkan Pemesanan</string>
    <string name="label_input_email">Masukkan Email</string>
    <string name="label_enter">Masuk</string>
    <string name="label_email">Email</string>
    <string name="label_verification">Verifikasi</string>
    <string name="label_back">Kembali</string>
    <string name="format_count_down_otp">Kode OTP kedaluwarsa pada __%s__</string>
    <string name="label_check_your_email">Cek Email Kamu</string>
    <string name="label_message_send_otp">Kami sudah mengirimkan kode OTP lewat email kamu</string>
    <string name="label_message_send_otp_phone">Kami sudah mengirimkan kode OTP lewat Inbox kamu</string>
    <string name="label_send_again">Kirim Lagi</string>
    <string name="message_login_required">Anda belum login</string>
    <string name="message_login_description">Untuk melanjutkan pemesanan tiket, anda harus login terlebih dahulu</string>
    <string name="label_login">Login</string>
    <string name="label_later">Nanti Saja</string>
    <string name="error_invalid_email">Email tidak valid</string>
    <string name="error_empty_email">Email tidak boleh kosong</string>
    <string name="error_empty_phone">Nomor Hp tidak boleh kosong</string>
    <string name="error_empty_password">Kata sandi tidak boleh kosong</string>
    <string name="error_empty_title">Title tidak boleh kosong</string>
    <string name="error_empty_nik">NIK tidak boleh kosong</string>
    <string name="error_empty_gender">Jenis Kelamin tidak boleh kosong</string>
    <string name="error_empty_birthday">Tanggal Lahir tidak boleh kosong</string>
    <string name="error_empty_country">Negara tidak boleh kosong</string>
    <string name="error_empty_city">Kota tidak boleh kosong</string>
    <string name="error_empty_address">Alamat tidak boleh kosong</string>
    <string name="error_empty_citizenship">Kewarganegaraan tidak boleh kosong</string>
    <string name="label_passenger_detail">Detail Penumpang</string>
    <string name="label_booker_detail">Detail Pemesan</string>
    <string name="label_passenger">Detail Penumpang</string>
    <string name="label_add_booker_as_passenger">Tambahkan pemesan sebagai penumpang</string>
    <string name="karakter_tujuh">Min. 7 Karakter berupa kombinasi angka, huruf besar, dan huruf kecil</string>
    <string name="menyetujui_syarat">Dengan membuat akun kamu menyetujui Syarat, Ketentuan dan Kebijakan Privasi Kaboor</string>
    <string name="email">Alamat Email</string>
    <string name="email_example">andrehutshon230@gmail.com</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_example">Ucop Maulana</string>
    <string name="sesuai_di_ktp_paspor_sim">Sesuai di KTP/Paspor/SIM</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="udah_punya_akun_log_in_aja">Udah punya akun? Log in aja!</string>
    <string name="login_syarat">Dengan Log In kamu menyerujui Syarat, Ketentuan dan Kebijakan Privasi Kaboor</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="contains_regitered_account">Email was registered</string>
    <string name="contains_available_account">Email is available for new user</string>
    <string name="message_account_not_registered">Email ini belum terdaftar untuk Login</string>
    <string name="message_account_not_registered_description">Untuk log in menggunakan email ini, silahkan lakukan daftar akun terlebih dulu ya</string>
    <string name="message_account_was_registered">Email ini sudah terdaftar untuk Log In</string>
    <string name="message_account_was_not_registered">Email ini belum terdaftar untuk Log In</string>
    <string name="message_account_was_registered_description">Untuk masuk ke akun, silahkan Log in menggunakan email ini menuju ke halaman Log in</string>
    <string name="message_account_was_not_registered_description">Untuk log in menggunakan email ini, silahkan lakukan daftar akun terlebih dulu ya</string>
    <string name="label_register_account">Daftar Akun</string>
    <string name="label_input_new_password">Masukkan Sandi Baru</string>
    <string name="label_confirm_input_new_password">Konfirmasi Sandi Baru</string>
    <string name="message_rule_new_password">Min. 7 Karakter berupa kombinasi angka, huruf besar, dan huruf kecil</string>
    <string name="label_change_password">Ubah Sandi</string>
    <string name="title_fill_your_detail_account">Isi Detail Akunmu</string>
    <string name="hint_62">+62</string>
    <string name="hint_full_name">Masukkan nama lengkap</string>
    <string name="label_full_name">Nama Lengkap</string>
    <string name="label_phone_number">Nomor Ponsel</string>
    <string name="message_rule_register_full_name">Sesuai di KTP/Paspor/SIM</string>
    <string name="error_required_phone_number">Nomor ponsel tidak boleh kosong</string>
    <string name="error_required_full_name">Nama lengkap tidak boleh kosong</string>
    <string name="error_required_password">Kata sandi tidak boleh kosong</string>
    <string name="label_my_email">Email Saya</string>
    <string name="label_my_phone">No. Telp</string>
    <string name="label_my_passport">Paspor</string>
    <string name="label_customer_service">Pusat Bantuan</string>
    <string name="label_logout">Keluar</string>
    <string name="title_voucher">Voucher</string>
    <string name="label_promo_and_voucher">Kode Promo &amp; Voucher</string>
    <string name="label_select_promo">Pilih Promo Buat Transaksimu </string>
    <string name="hint_input_your_code">Masukkan Kodemu</string>
    <string name="label_code">Kode : </string>
    <string name="label_snk">S&amp;K Berlaku</string>
    <string name="title_personal_information">Informasi Pribadi</string>
    <string name="label_title">Titel</string>
    <string name="label_first_middle_name">Nama Depan &amp; Nama Tengah</string>
    <string name="label_last_name">Nama Belakang</string>
    <string name="label_nik">NIK</string>
    <string name="label_gender">Jenis Kelamin</string>
    <string name="label_date_of_birth">Tanggal Lahir</string>
    <string name="label_country">Negara</string>
    <string name="label_city">Kota</string>
    <string name="label_full_address">Alamat Lengkap</string>
    <string name="label_citizenship">Kewarganegaraan</string>
    <string name="hint_title">Pilih Titel</string>
    <string name="hint_first_middle_name">Masukkan nama depan &amp; nama tengah</string>
    <string name="hint_last_name">Masukkan nama belakang</string>
    <string name="hint_nik">Masukkan NIK</string>
    <string name="hint_gender">Pilih jenis kelamin</string>
    <string name="hint_date_of_birth">Masukkan tanggal lahir</string>
    <string name="hint_country">Masukkan negara</string>
    <string name="hint_city">Masukkan kota</string>
    <string name="hint_full_address">Masukkan alamat lengkap</string>
    <string name="hint_citizenship">Masukkan kewarganegaraan</string>
    <string name="title_payment">Pembayaran</string>
    <string name="label_finish_in">Selesaikan dalam</string>
    <string name="label_make_transfer_to">Lakukan Transfer ke</string>
    <string name="label_total_payment">Total Pembayaran</string>
    <string name="label_how_to_pay">Cara Membayar</string>
    <string name="label_transfer_via_atm">Transfer Melalui ATM</string>
    <string name="label_transfer_via_mobile_banking">Transfer Melalui Mobile Banking</string>
    <string name="label_transfer_via_internet_banking">Transfer Melalui Internet Banking</string>
    <string name="message_detail_payment">Setelah pembayaran diverifikasi, e-ticket, dan bukti pembayaran akan dikirimkan melalui ke alamat email terdaftar</string>
    <string name="label_view_order">Lihat Daftar Pesanan</string>
    <string name="label_change_payment_method">Ganti Metode Pembayaran</string>
    <string name="message_failed_select_image">Gagal mengambil gambar</string>
    <string name="title_alert_remove_image">Yakin ingin menghapus bukti transfer</string>
    <string name="message_alert_remove_image">Jika kamu menghapus bukti transfer, kamu harus mengunggah ulang bukti transfer</string>
    <string name="label_remove">Hapus</string>
    <string name="label_cancel">Batal</string>
    <string name="title_extra_protection">Perlindungan Ekstra</string>
    <string name="label_total_price">Total Harga</string>
    <string name="title_travel_insurance">Asuransi Perjalanan</string>
    <string name="label_insurance_1">Kompensasi hingga Rp 500 Juta untuk berbagai resiko tak terduga</string>
    <string name="label_insurance_2">Pembatalan perjalanan (alasan tertentu) hingga Rp 30 Juta</string>
    <string name="title_baggage_insurance">Asuransi Bagasi</string>
    <string name="label_baggage_insurance">Lindungi bagasi dari kerusakan atau kehilangan hingga Rp 25 Juta</string>
    <string name="title_delay_protection">Proteksi Keterlambatan</string>
    <string name="label_delay_protection">Kompensasi Rp. 200 Ribu per 2 jam untuk segala resiko keterlambatan</string>
    <string name="title_dependents">Tanggungan</string>
    <string name="title_compensation">Kompensasi</string>
    <string name="key_insurance_1">Santunan sebanyak satu kali jika Anda meninggal dunia atau cacat tetap akibat kecelakaan.</string>
    <string name="key_insurance_2">Menanggung biaya perawatan medis selama perjalanan Anda yang dibutuhkan akibat kecelakaan.</string>
    <string name="key_insurance_3">Menanggung biaya perjalanan dan akomodasi yang hangus jika perjalanan Anda harus dibatalkan setidaknya 30 hari sebelum tanggal keberangkatan Anda, akibat risiko-risiko yang ditanggung.</string>
    <string name="key_insurance_4">Menanggung biaya perawatan medis selama perjalanan Anda yang dibutuhkan akibat kecelakaan.</string>
    <string name="value_insurance_1">Hingga Rp 150.000.000</string>
    <string name="value_insurance_2">Dari Rp 37.500.000 sampai Rp. 150.000.000</string>
    <string name="value_insurance_3">Dari Rp 1.000.000 sampai Rp. 5.000.000</string>
    <string name="value_insurance_4">Dari Rp 37.500.000 sampai Rp. 150.000.000</string>
    <string name="masukan_no_baru">Tolong masukkan nomor handphone yang baru</string>
    <string name="kode_verifikasi">Kode Verifikasi</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="label_passport">Paspor</string>
    <string name="label_detail_passport">Detail Paspor</string>
    <string name="message_detail_passport">Isi semua kolom dengan data paspor yang berlaku ya</string>
    <string name="label_passport_number">Nomor Paspor</string>
    <string name="label_expired_date">Tanggal Kadaluwarsa</string>
    <string name="label_country_of_issue">Negara yang Menerbitkan</string>
    <string name="hint_passport_number">Masukkan nomor passport</string>
    <string name="hint_expired_date">Masukkan tanggal kadaluwarsa</string>
</resources>