<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".account.passport.AddPassportActivity">

    <com.synrgy.common.reusable.KaboorAppbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:kaboorAppbar_title="@string/label_passport" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginVertical="@dimen/dimen_16dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_detail_passport"
            style="@style/KaboorTextView.Title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_detail_passport" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_message_detail_passport"
            style="@style/KaboorTextView.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_detail_passport"
            android:textColor="@color/neutral6" />

        <com.synrgy.common.reusable.KaboorEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:kaboorEditText_hint="@string/hint_full_name"
            app:kaboorEditText_label="@string/label_full_name" />

        <com.synrgy.common.reusable.KaboorEditText
            android:id="@+id/et_passport_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:kaboorEditText_hint="@string/hint_passport_number"
            app:kaboorEditText_label="@string/label_passport_number"
            app:kaboorEditText_type="number" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_expired_date"
            style="@style/KaboorTextView.Title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/label_expired_date" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_expired_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@drawable/bg_stroke_neutral_5"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_expired_date"
                style="@style/KaboorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_12dp"
                android:layout_weight="1"
                android:hint="@string/hint_expired_date" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_expired_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_12dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_calendar_black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.synrgy.common.reusable.KaboorEditText
            android:id="@+id/et_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:kaboorEditText_hint="@string/hint_country"
            app:kaboorEditText_label="@string/label_country_of_issue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/KaboorButton.Gradient"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_42dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/label_save" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>